syntax = "proto3";

package me.jeff.ignitepoc.grpc.user.dto;

option java_multiple_files = true;

message SearchUserRequest {
  int32 id = 1;
  string name = 2;
  int32 age =3;
  string address = 4;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  int32 age =3;
  string address = 4;
}

message AddUserRequest {
  string name = 1;
  int32 age =2;
  string address = 3;
}
